manifests/overlays/dev/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: private-route
spec:
  parentRefs:
    - name: private-gateway
      namespace: ingress-system
      sectionName: https
  hostnames:
    # Any `[a-z]+.dev.k8s-platform-v3.liatr.io` domain is valid here.
    # On `prod` clusters, switch `dev` to `prod`.
    - 'go-example.dev.k8s-platform-v3.liatr.io'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        # This is your service name and port
        - name: go-example-svc
          port: 8080
